--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
+    //dependencies for img
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
 }
